--- a/src/Components/Projects/Card.css
+++ b/src/Components/Projects/Card.css
@@ -4,12 +4,13 @@ padding:10px;
 border-radius: 5px;
 border :3px solid #00b894;
 margin:10px auto;
-background-color:black;
+background-color: rgba(255, 255, 255, .05);  
+    backdrop-filter: blur(5px);
 color:aliceblue
 }
 .box:hover{
     box-shadow: 0 0 20px 0 #999;
-    color:#00b894;
+    color:rgb(116, 181, 237);
 }
 .box img{
     max-width: 300px;
