--- a/src/Header2/Header.css
+++ b/src/Header2/Header.css
@@ -1,6 +1,7 @@
 nav{
     height: 10vh;
-    background:#1b1b1b;
+    background-color: rgba(255, 255, 255, .05);  
+    backdrop-filter: blur(5px);
     align-items: center;
     display:flex;
     position: relative;
