--- a/src/Header2/Header.css
+++ b/src/Header2/Header.css
@@ -7,6 +7,8 @@ nav{
     position: relative;
     justify-content: space-between;
     z-index:10;
+    width: 100%;
+    position: fixed;
     padding: 0px 50px 0px 100px;
 }
 nav ul{
