--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -4,6 +4,7 @@ section{
     align-items: center;
     display: flex;
     justify-content: center;
+   
 }
 
 @keyframes pan {
@@ -26,11 +27,13 @@ body{
     align-items: center;
     border: 1px solid #00b894;
     border-radius: 10px;
-    background-color: rgba(255, 255, 255, .05);  
-    backdrop-filter: blur(5px);
+    background-color: rgb(0,24,41);
+    /* background-color: rgba(255, 255, 255, 0.023);   */
+    /* backdrop-filter: blur(10px); */
 }
 .childdiv{
   padding: 15px;
+  width:50%;
 }
 h2{
     color:rgb(116, 181, 237);
